Labatt POCM Deployment to UAT 09.16.2016/objects/Annual_Area_Budget__c.object
<CustomObject>
    <description>Custom object to track the cascading of budget for POC Planning for the region, district &amp; territory. (Slalom 8/2016)</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_KI_Volume__c</fullName>
        <label>Assigned KI Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Area__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Budget Area</label>
        <referenceTo>Budget_Area__c</referenceTo>
        <relationshipLabel>Annual Area Budgets</relationshipLabel>
        <relationshipName>Annual_Area_Budgets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Plan__c</fullName>
        <formula>HYPERLINK( LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+ &quot;apex/POCPlanningApp&quot; + &quot;?Page=Dashboard&quot; + &quot;&amp;TerritoryId=&quot; + Budget_Area__c + &quot;&amp;Year=&quot; +  Budget_Year__c , &quot;Planning App&quot; , &quot;_blank&quot;)</formula>
        <inlineHelpText>Link to this Territory&apos;s entire Budget Plan</inlineHelpText>
        <label>Budget Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Year__c</fullName>
        <defaultValue>TEXT(YEAR(TODAY()))</defaultValue>
        <label>Budget Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAPEX_Assets_Budget__c</fullName>
        <label>CAPEX Assets Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DSM_Parked_Budget__c</fullName>
        <formula>District_Budget_Total__c - District_Budget_Allocated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSM Parked Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discretionary_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discretionary Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discretionary_Pre_Planning_Spend__c</fullName>
        <inlineHelpText>Calculated roll-up field of all Discretionary Pre-Planning spend for this budget.</inlineHelpText>
        <label>Discretionary Pre-Planning Spend</label>
        <summarizedField>Annual_POC_Budget_Plan__c.Discretionary_Pre_Planning_Spend__c</summarizedField>
        <summaryForeignKey>Annual_POC_Budget_Plan__c.Annual_Territory_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discretionary_Spend__c</fullName>
        <formula>Discretionary_Pre_Planning_Spend__c +  Discretionary_Variable_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discretionary Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discretionary_Variable_Spend__c</fullName>
        <inlineHelpText>Calculated roll-up field of all Discretionary Variable spend for this budget.</inlineHelpText>
        <label>Discretionary Variable Spend</label>
        <summarizedField>Annual_POC_Budget_Plan__c.Discretionary_Pre_Planning_Spend__c</summarizedField>
        <summaryForeignKey>Annual_POC_Budget_Plan__c.Annual_Territory_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>District_Budget_Allocated__c</fullName>
        <label>District Budget Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>District_Budget_Total__c</fullName>
        <label>District Budget Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Driver_Spend__c</fullName>
        <inlineHelpText>Calculated roll-up field of all Driver spend for this budget.</inlineHelpText>
        <label>Driver Spend</label>
        <summarizedField>Annual_POC_Budget_Plan__c.Driver_Spend__c</summarizedField>
        <summaryForeignKey>Annual_POC_Budget_Plan__c.Annual_Territory_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Drivers_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Drivers Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Territory</label>
        <referenceTo>lboc_Sales_Territory__c</referenceTo>
        <relationshipLabel>Annual Area Budgets</relationshipLabel>
        <relationshipName>Annual_Area_Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>DSM Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Volume__c</fullName>
        <label>Target Volume</label>
        <summarizedField>Annual_POC_Budget_Plan__c.Target_Vol_HL__c</summarizedField>
        <summaryForeignKey>Annual_POC_Budget_Plan__c.Annual_Territory_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Budget__c</fullName>
        <formula>Trade_Activation_Budget__c + Drivers_Budget__c +  Discretionary_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_Activation_Budget__c</fullName>
        <label>Trade Activation Budget</label>
        <summarizedField>Annual_Brand_Area_Budget_Plan__c.Brand_Budget__c</summarizedField>
        <summaryForeignKey>Annual_Brand_Area_Budget_Plan__c.Annual_Area_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Annual Area Budget</label>
    <listViews>
        <fullName>All_2016_Annual_Area_Budgets</fullName>
        <columns>NAME</columns>
        <columns>Sales_Territory__c</columns>
        <columns>Budget_Year__c</columns>
        <columns>Assigned_KI_Volume__c</columns>
        <columns>Total_Budget__c</columns>
        <columns>Trade_Activation_Budget__c</columns>
        <columns>Discretionary_Budget__c</columns>
        <columns>Drivers_Budget__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Budget_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>All 2016 Annual Area Budgets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Annual_Area_Budgets</fullName>
        <columns>NAME</columns>
        <columns>Budget_Year__c</columns>
        <columns>Assigned_KI_Volume__c</columns>
        <columns>Total_Budget__c</columns>
        <columns>Trade_Activation_Budget__c</columns>
        <columns>Discretionary_Budget__c</columns>
        <columns>Drivers_Budget__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Annual Area Budgets</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AAB-{0000}</displayFormat>
        <label>Annual Area Budget ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Area Budgets</pluralLabel>
    <recordTypes>
        <fullName>District</fullName>
        <active>true</active>
        <description>Use this record type for all District budgets.</description>
        <label>District</label>
    </recordTypes>
    <recordTypes>
        <fullName>Territory</fullName>
        <active>true</active>
        <description>Use this record type for all Territory budgets.</description>
        <label>Territory</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>